:art: fixing dark mode var colors

--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -52,8 +52,8 @@
 .arrow{
     cursor: pointer;
     position: fixed;
-    margin-top: 30%;
-    width: 1.5vw;
+    margin-top: 25%;
+    width: 3vw;
     padding: 0vh 1.6vw;
 }
 .arrowLeft {
