--- a/src/components/MySkills/styles.css
+++ b/src/components/MySkills/styles.css
@@ -27,7 +27,7 @@
 }
 
 .skillsTag p {
-  color: var(--text-secondary);
+  color: var(--secondary-text);
   background-color: var(--primary-background);
   font-family: 'Poppins';
   font-size: 1rem;
@@ -246,6 +246,7 @@
   align-items: center;
   justify-content: center;
   position: fixed;
+  color: var(--secondary-text);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -256,11 +257,12 @@
   box-shadow: var(--shadow);
 }
 .close{
-  border: none;
-    right: 1rem;
-    top: 1rem;
+    border: none;
+    right: 0;
+    top: 0;
     position: fixed;
     cursor: pointer;
     background: none;
-    padding: 0.6vw;
+    padding: 1vw;
+    color: var(--primary-text);
 }
